--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
     sdk: flutter
   rxdart: ^0.27.7
   esc_pos_utils_updated: ^1.1.1
-  flutter_bluetooth_basic_updated: ^0.1.9
+  flutter_bluetooth_basic_updated:
+    git:
+      url: https://github.com/Ab3id/flutter_bluetooth_basic.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
